--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <title>DETECT OBJECT BY YOLOV8 - WEB FLASK FRAME WORK</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
         #video-container {
             width: 100%;
@@ -24,7 +25,16 @@
 
 <body>
     <div class="container">
-        <h1>Upload Image Object Detection</h1>
+        <h1>Object Detection - Apple Detection (Fresh / Stale)</h1>
+        <h3>Task: </h3>
+        <ul>
+            <li>Object Detection With Image Upload(Can Multiple Image) <i class="bi-check-lg text-success"></i></li>
+            <li>Display Object Detection Results <i class="bi-check-lg text-success"></i></li>
+            <li>Download Object Detection Results <i class="bi-check-lg text-success"></i></li>
+            <li>Apple Counting <i class="bi-check-lg text-success"></i></li>
+            <li>Design Web Interface <i class="bi-x-lg text-danger"></i></li>
+        </ul>
+        <h1>Upload Image</h1>
 
         <form action="/imgpred" method="post" enctype="multipart/form-data">
             <input type="file" name="images[]" accept="image/*" required multiple>
