add apple counting in realtime detection

--- a/templates/index.html
+++ b/templates/index.html
@@ -232,11 +232,11 @@
                                     With Image
                                 </a>
                             </li>
-                            <li role="presentation" class="nav-item">
+                            <!-- <li role="presentation" class="nav-item">
                                 <a href="#tab-02" class="nav-link" aria-controls="tab-02" role="tab" data-toggle="tab">
                                     With Video
                                 </a>
-                            </li>
+                            </li> -->
                             <li role="presentation" class="nav-item">
                                 <a href="#tab-03" class="nav-link" aria-controls="tab-03" role="tab" data-toggle="tab">
                                     With Live Camera
@@ -273,9 +273,9 @@
                                     </div>
                                 </form>
                             </div>
-                            <div role="tabpanel" class="tab-pane" id="tab-02">
+                            <!-- <div role="tabpanel" class="tab-pane" id="tab-02">
                                 <p>Sementara tidak tersedia (masih bingung perlu ditambah atau tidak)</p>
-                            </div>
+                            </div> -->
                             <!-- realtime detection -->
                             <div role="tabpanel" class="tab-pane" id="tab-03">
                                 <h4>Directly Detect Apple With Your Camera</h4>
