change design in header section

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,6 +46,18 @@
             display: block;
             transform: rotate(0deg);
         }
+
+        .section.section-footer {
+            padding: 0;
+        }
+
+        .footer-area {
+            padding: 60px 0;
+        }
+
+        .smooth>.smooth-link:hover, .nav-item>.nav-link:hover {
+            color: #45CBC8 !important;
+        }
     </style>
 </head>
 
@@ -292,6 +304,7 @@
     </section>
     <!-- End of Aplikasi section -->
 
+    <!-- alert success predict -->
     <div id="alertSuccess" class="alert alert-success alert-dismissible fade" role="alert">
         <strong>Prediction success!</strong> Check on the Predict Results
         Button!.
@@ -453,7 +466,7 @@
     <!-- end team section -->
 
     <!-- Contact Section -->
-    <section id="contact" class="section has-img-bg pb-0">
+    <section id="contact" class="section has-img-bg section-footer pb-0">
         <div class="container">
             <!-- footer -->
             <div class="footer-area">
