--- a/static/assets/css/leadmark.css
+++ b/static/assets/css/leadmark.css
@@ -2,6 +2,7 @@
 
 @import url("https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i");
 :root {
+  --mainColor: #45CBC8;
   --blue: #007bff;
   --indigo: #6610f2;
   --purple: #6f42c1;
@@ -4963,7 +4964,7 @@ input[type="button"].btn-block {
 .navbar-light .navbar-nav .active > .nav-link,
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .nav-link.active {
-  color: rgba(0, 0, 0, 0.9);
+  color: var(--mainColor) !important;
 }
 
 .navbar-light .navbar-toggler {
@@ -11882,7 +11883,7 @@ h2.widget-title:after {
   left: 0;
   top: 0;
   content: "\f105";
-  font-family: "Font Awesome 5 Free";
+  font-family: "FontAwesome";
   font-weight: 900;
   color: #45CBC8;
 }
